--- a/app/src/main/assets/css/default.css
+++ b/app/src/main/assets/css/default.css
@@ -14,7 +14,14 @@ body {
 #tracking-start-stop-button{
     position: absolute;
     bottom: 0;
+    width: 50%;
+    right: 0;
+    left: 0;
     max-width: 100px;
-    text-align: center;
+    margin: auto;
+}
+
+.active {
+
 }
 
