--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,8 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="Gray">#ACACAC</color>
+    <color name="grey_bg">#4D000000</color>
+    <color name="button_grey">#808080</color>
+    <color name="transparency">#01c7c7c7</color>
+    <color name="white">#FFF</color>
 </resources>
