--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -19,8 +19,10 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:fitsSystemWindows="true"
+        android:background="#dc262626"
         app:headerLayout="@layout/nav_header"
+        app:itemIconTint="#BBBAC2"
+        app:itemTextColor="#BBBAC2"
         app:menu="@menu/drawer" />
 
 </android.support.v4.widget.DrawerLayout>
