--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,11 +29,12 @@
             android:gravity="center"
             android:orientation="vertical">
 
-            <TextView
+            <me.grantland.widget.AutofitTextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="cursive"
                 android:gravity="center"
+                android:maxLines="1"
                 android:paddingBottom="40dp"
                 android:text="@string/app_name"
                 android:textColor="@color/white"
