--- a/app/src/main/res/layout/activity_model.xml
+++ b/app/src/main/res/layout/activity_model.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="fcih.furniturego.ModelActivity">
+    tools:context=".ModelActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
