--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="fcih.furniturego.ProfileFragment">
+    tools:context=".ProfileFragment">
 
     <android.support.v7.widget.ActionBarContainer
         android:layout_width="match_parent"
