--- a/app/src/main/res/layout/app_bar_base.xml
+++ b/app/src/main/res/layout/app_bar_base.xml
@@ -23,6 +23,7 @@
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
             android:visibility="gone" />
 
     </android.support.design.widget.AppBarLayout>
