--- a/app/src/main/res/layout/content_model.xml
+++ b/app/src/main/res/layout/content_model.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="fcih.furniturego.ModelActivity"
-    tools:showIn="@layout/activity_model">
+    tools:context=".ModelActivity"
+    tools:showIn="@layout/fragment_model">
 
     <LinearLayout
         android:id="@+id/container"
