--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -5,9 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
-    android:clickable="true"
     android:foreground="?selectableItemBackground"
-    card_view:cardBackgroundColor="#d8dad8"
+    card_view:cardBackgroundColor="@color/common_google_signin_btn_text_light_focused"
     card_view:cardCornerRadius="12dp"
     card_view:cardElevation="3dp"
     card_view:contentPadding="4dp">
@@ -33,6 +32,7 @@
             android:layout_toRightOf="@+id/item_image"
             android:paddingTop="5dp"
             android:text="Name"
+            android:textColor="@android:color/white"
             android:textSize="25sp" />
 
         <TextView
@@ -41,7 +41,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/item_title"
             android:layout_toRightOf="@+id/item_image"
-            android:text="Company" />
+            android:text="Company"
+            android:textColor="@android:color/white" />
 
         <TextView
             android:id="@+id/item_rate"
@@ -49,7 +50,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/item_company"
             android:layout_toRightOf="@+id/item_image"
-            android:text="4.0★" />
+            android:text="4.0★"
+            android:textColor="@android:color/white" />
 
         <ImageButton
             android:id="@+id/item_menu"
@@ -60,6 +62,7 @@
             android:background="@null"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
+            android:tint="@android:color/white"
             card_view:srcCompat="@drawable/ic_dots" />
 
     </RelativeLayout>
