--- a/app/src/main/assets/css/default.css
+++ b/app/src/main/assets/css/default.css
@@ -21,6 +21,19 @@ body {
     margin: auto;
 }
 
+#tracking-screenshot-button{
+    position: absolute;
+    top: 0;
+    width: 50%;
+    right: 0;
+    max-width: 100px;
+    margin: auto;
+}
+
+.ui-mobile-viewport, .ui-overlay-a, .ui-page, .ui-page-theme-a, .ui-page-active, .ui-panel-wrapper{
+    background: none !important;
+    background-color: rgba(255, 255, 255, 0) !important;
+}​
 .active {
 
 }
