--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -23,8 +23,8 @@
 
                 <ImageView
                     android:id="@+id/backimg"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="50dp"
+                    android:layout_height="30dp"
                     android:layout_marginLeft="20dp"
                     android:tint="@color/white"
                     app:srcCompat="@drawable/ic_arrow_back" />
@@ -40,8 +40,8 @@
 
                 <TextView
                     android:id="@+id/savetext"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="50dp"
+                    android:layout_height="30dp"
                     android:layout_gravity="end"
                     android:layout_marginRight="20dp"
                     android:text="Save"
@@ -75,12 +75,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:weightSum="100">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
+            android:layout_weight="25"
             android:padding="15dp"
             android:text="Name"
             android:textSize="14sp" />
@@ -105,12 +107,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:weightSum="100">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
+            android:layout_weight="25"
             android:inputType="none"
             android:padding="15dp"
             android:text="Email"
@@ -120,7 +124,7 @@
             android:id="@+id/emailedit"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="50"
             android:editable="false"
             android:hint="Enter Your Email"
             android:inputType="none|textEmailAddress"
@@ -129,8 +133,9 @@
 
         <ImageButton
             android:id="@+id/editemail"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="25"
             app:srcCompat="@drawable/ic_edit_dp" />
     </LinearLayout>
 
@@ -142,12 +147,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:weightSum="100">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
+            android:layout_weight="25"
             android:padding="15dp"
             android:text="Password"
             android:textSize="14sp" />
@@ -156,7 +163,7 @@
             android:id="@+id/passwordedit"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="50"
             android:editable="false"
             android:hint="**********"
             android:inputType="none|textPassword"
@@ -165,8 +172,9 @@
 
         <ImageButton
             android:id="@+id/editpassword"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="25"
             android:contentDescription="edit"
             app:srcCompat="@drawable/ic_edit_dp" />
     </LinearLayout>
@@ -179,12 +187,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:weightSum="100">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
+            android:layout_weight="25"
             android:padding="15dp"
             android:text="Picture"
             android:textSize="14sp" />
@@ -193,7 +203,7 @@
             android:id="@+id/Browsebutton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="75"
             android:text="Browse" />
 
     </LinearLayout>
