--- a/app/src/main/res/layout/content_model.xml
+++ b/app/src/main/res/layout/content_model.xml
@@ -11,10 +11,8 @@
     <LinearLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin">
 
         <LinearLayout
@@ -74,7 +72,7 @@
                 android:id="@+id/Downloading"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="70"
+                android:layout_weight="65"
                 android:orientation="vertical"
                 android:visibility="invisible">
 
@@ -114,7 +112,7 @@
                 android:id="@+id/Download"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="30"
+                android:layout_weight="35"
                 android:text="Download" />
 
         </LinearLayout>
@@ -132,7 +130,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/model_rate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="3.5"
@@ -145,14 +143,17 @@
                 android:orientation="vertical">
 
                 <RatingBar
+                    android:id="@+id/model_stars"
                     style="@style/Widget.AppCompat.RatingBar.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:editable="false"
                     android:numStars="5"
                     android:rating="3.5"
                     android:theme="@style/RatingBar" />
 
                 <TextView
+                    android:id="@+id/model_feed_num"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="100,000"
@@ -168,29 +169,79 @@
             android:background="#ACACAC" />
 
 
-        <ListView
-            android:id="@+id/FeedbackList"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:scrollbars="vertical" />
+            android:layout_height="wrap_content"
+            android:background="@color/grey_bg"
+            android:orientation="vertical">
+
+            <com.makeramen.roundedimageview.RoundedImageView
+                android:id="@+id/userimage"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_gravity="center"
+                android:layout_weight="10"
+                android:src="@drawable/com_facebook_profile_picture_blank_portrait"
+                app:riv_corner_radius="35dip"
+                app:riv_mutate_background="true"
+                app:riv_oval="true"
+                app:riv_tile_mode="clamp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:padding="15dp"
+                android:text="Rate This Model"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textSize="18sp" />
+
+            <RatingBar
+                android:id="@+id/User_Rate"
+                style="@style/Widget.AppCompat.RatingBar.Indicator"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:isIndicator="false"
+                android:numStars="5"
+                android:stepSize="1.0"
+                android:theme="@style/RatingBar2" />
+
+            <EditText
+                android:id="@+id/User_Feedback"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:hint="Leave your feedback" />
+
+            <Button
+                android:id="@+id/Submit_Button"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="Submit" />
+        </LinearLayout>
+
         <View
+            android:id="@+id/view"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_margin="20dp"
             android:background="#ACACAC" />
 
-        <EditText
-            android:id="@+id/FeedbackTxt"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/FeedbackList"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="Leave your feedback" />
+            android:layout_height="wrap_content"
+            android:scrollbars="vertical"
+            app:layoutManager="LinearLayoutManager"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            tools:listitem="@layout/feedback_item" />
 
-        <Button
-            android:id="@+id/addFeedback"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Submit" />
     </LinearLayout>
-
 
 </android.support.v4.widget.NestedScrollView>
