--- a/app/src/main/res/layout/editpassword.xml
+++ b/app/src/main/res/layout/editpassword.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:gravity="center"
-        android:text="Change Password"
+        android:text="@string/change_password_title"
         android:textSize="25sp"
         android:textStyle="bold" />
 
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:ems="10"
-        android:hint="Password"
+        android:hint="@string/password"
         android:inputType="textPassword" />
 
     <EditText
@@ -28,13 +28,13 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:ems="10"
-        android:hint="ReType Password"
+        android:hint="@string/retype_password"
         android:inputType="textPassword" />
 
     <Button
         android:id="@+id/doeditpassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Change Password" />
+        android:text="@string/submit" />
 
 </LinearLayout>
