--- a/app/src/main/res/layout/fragment_model.xml
+++ b/app/src/main/res/layout/fragment_model.xml
@@ -27,8 +27,7 @@
                 android:id="@+id/gif"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="fitCenter"
-                android:src="@drawable/loading" />
+                android:scaleType="fitCenter" />
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
