--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -4,52 +4,46 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="bottom"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark">
+    android:theme="@style/ThemeOverlay.AppCompat.Dark"
+    android:weightSum="100">
+
+    <com.makeramen.roundedimageview.RoundedImageView
+        android:id="@+id/nav_user_image"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_gravity="start"
+        android:layout_weight="20"
+        app:riv_corner_radius="35dip"
+        app:riv_mutate_background="true"
+        app:riv_oval="true"
+        app:riv_tile_mode="clamp" />
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="80"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="10dp">
 
-        <com.makeramen.roundedimageview.RoundedImageView
-            android:id="@+id/nav_user_image"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_gravity="start"
-            android:layout_weight="1"
-            android:src="@drawable/com_facebook_profile_picture_blank_portrait"
-            app:riv_corner_radius="35dip"
-            app:riv_mutate_background="true"
-            app:riv_oval="true"
-            app:riv_tile_mode="clamp" />
-
-        <LinearLayout
+        <TextView
+            android:id="@+id/nav_user_name"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:padding="10dp">
+            android:layout_height="wrap_content"
+            android:paddingTop="@dimen/nav_header_vertical_spacing"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textSize="13sp" />
 
-            <TextView
-                android:id="@+id/nav_user_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingTop="@dimen/nav_header_vertical_spacing"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                android:textSize="13sp" />
-
-            <TextView
-                android:id="@+id/nav_user_email"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="12sp" />
-        </LinearLayout>
+        <TextView
+            android:id="@+id/nav_user_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="12sp" />
     </LinearLayout>
 
 </LinearLayout>
