--- a/app/src/main/res/layout/content_model.xml
+++ b/app/src/main/res/layout/content_model.xml
@@ -118,6 +118,16 @@
             android:layout_height="1dp"
             android:layout_margin="20dp"
             android:background="#ACACAC" />
+        <TextView
+            android:id="@+id/model_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="15sp" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_margin="20dp"
+            android:background="#ACACAC" />
 
         <LinearLayout
             android:layout_width="match_parent"
